UPDATE: removed norwegian letters